--- a/src/pages/Popup/index.css
+++ b/src/pages/Popup/index.css
@@ -1,17 +1,9 @@
 body {
-  width: 300px;
-  height: 260px;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
-  position: relative;
+  font-weight: 200;
+  font-family: 'Pretendard', 'Noto Sans KR', sans-serif, 'Roboto',
+    'Roboto Serif';
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#app-container {
 }
