--- a/src/pages/Popup/Popup.css
+++ b/src/pages/Popup/Popup.css
@@ -90,6 +90,7 @@ nav section:last-child div:first-child div:first-child {
   border: 1px solid rgb(155, 155, 155);
   border-radius: 5px;
   font-size: 11px;
+  font-weight: 500;
   box-shadow: 0px 2px 4px 0px rgba(116, 116, 116, 0.589);
 }
 .coinSearchBar svg {
