acc trade pirce add coma

--- a/src/pages/Popup/Popup.css
+++ b/src/pages/Popup/Popup.css
@@ -330,6 +330,17 @@ table tbody tr td {
   display: flex;
 }
 
+.coinItemsPrice {
+  animation: blink 1;
+}
+@keyframes blink {
+  0% {
+    background-color: none;
+  }
+  50% {
+    background-color: red;
+  }
+}
 .coinItemsName section {
   display: flex;
 }
