--- a/src/pages/Popup/Popup.css
+++ b/src/pages/Popup/Popup.css
@@ -44,6 +44,9 @@ nav section:first-child input {
   justify-content: space-between;
   padding: 5px 0;
 }
+.nav_top_section button {
+  border: none;
+}
 .nav_top_section img {
   width: 25px;
 }
